# turtlebot_course_environment

./: ReadMe.md  docker-compose.yml  dockerfile
src/mars_rover/leo_rover_simulation/leo_description/: CMakeLists.txt  package.xml
src/mars_rover/leo_rover_simulation/leo_description/action/: GoToPose.action  Rotate.action
src/mars_rover/leo_rover_simulation/leo_description/config/: nav2_params.yaml  online_async.yaml  rviz_config.rviz
src/mars_rover/leo_rover_simulation/leo_description/launch/: loc_nav.launch.py  main_actions.launch.py  main_ice_env.launch.py  main_low.launch.py  main_missions.launch.py  main_pro.launch.py  main_simple.launch.py
src/mars_rover/leo_rover_simulation/leo_description/map/: map_mars_last.pgm  map_mars_last.yaml
src/mars_rover/leo_rover_simulation/leo_description/meshes/: WheelA_v2.dae  WheelB_v2.dae  WheelMecanumA_v2.dae  WheelMecanumB_v2.dae  laser.dae
src/mars_rover/leo_rover_simulation/leo_description/models/alien1/: model.config  model.sdf
src/mars_rover/leo_rover_simulation/leo_description/models/astronaut/: model.config  model.sdf
src/mars_rover/leo_rover_simulation/leo_description/models/astronaut_pro/: model.config  model.sdf
src/mars_rover/leo_rover_simulation/leo_description/models/crate/: model.config  model.sdf
src/mars_rover/leo_rover_simulation/leo_description/models/crate_waste/: model.config  model.sdf
src/mars_rover/leo_rover_simulation/leo_description/rviz/: rover.rviz
src/mars_rover/leo_rover_simulation/leo_description/scripts/: go_to_pose_server.py  meteor_crater.py  pose_entity.py  remove_entity.py  rotate_action_server.py  spawn_entity.py
src/mars_rover/leo_rover_simulation/leo_description/urdf/: leo_actions.urdf.xacro  leo_sim.urdf.xacro  leo_sim_actions.urdf.xacro  macros.xacro  macros_actions.xacro  sensors.xacro  sensors_actions.xacro
src/mars_rover/leo_rover_simulation/leo_description/worlds/: space_ice_env.world  space_terrain_env.world  space_terrain_env_low.world  space_terrain_env_missions.world  space_terrain_env_missions_highlights.world  space_terrain_env_simple.world  space_terrain_flat_env.world
src/mars_rover/leo_rover_simulation/leo_gazebo_plugins/: CMakeLists.txt
src/mars_rover/leo_rover_simulation/leo_gazebo_plugins/src/: differential_plugin.cpp
src/ros2_callbacks_examples/: README.md  (+1 more)
(+98 files in other folders)
